--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.format_sql=true
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
