--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
 
-server.error.include-stacktrace=never
+api.security.secret=${JWT_SECRET:123456}
+
+#server.error.include-stacktrace=never
 
 
